fix du z-index, changement du gradient

--- a/default_index.css
+++ b/default_index.css
@@ -181,6 +181,7 @@ main h1, main p {
     font-weight: 600;
     text-align: center;
     text-decoration: none;
+    z-index: 10;
     color: #F1F5F8;
     background: linear-gradient(to right, #3C91E6, #00B0FF);
     border: none;
@@ -248,7 +249,7 @@ main h1, main p {
     right: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 1) 80%),  var(--project-image);
+    background: linear-gradient(to left, rgba(7, 77, 143, 0.554) 0%, rgba(0, 0, 0, 1) 80%),  var(--project-image);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -274,6 +275,10 @@ main h1, main p {
     background-color: #3C91E6;
     transition: width 0.3s ease;
 }
+.project-content a:hover{
+    color : #3C91E6;
+}
+
 
 .project-content a:hover::after {
     width: 100%;
